fix horizontal scroll

--- a/static/css/text_markup.css
+++ b/static/css/text_markup.css
@@ -645,3 +645,8 @@ label[for="id_iderrortag"] {
 .annotation-wrap input {
     width: 100%;
 }
+
+.text-header, .menu-container {
+    margin-left: 0;
+    margin-right: 0;
+}
